<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Barcode Generator</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Generate</string>
    <string name="enter_your_information">Enter your information</string>
    <string name="enter_password">Enter Password</string>
    <string name="encrypted">Encrypted</string>
    <string name="qr_code_preview">QR Code preview</string>
    <string name="ok">OK</string>
    <string name="dismiss">Dismiss</string>
    <string name="scan_result">Scan Result:</string>
    <string name="standard">Standard</string>
    <string name="profile_picture">profile_picture</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="email">Email:</string>
    <string name="phone_no">Phone No:</string>
    <string name="gender">Gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="aadhaar_no">Aadhaar No:</string>
    <string name="pan_card_no">PAN card No:</string>

    <string name="copy">copy</string>
    <string-array name="Current_Status">
        <item>Student</item>
        <item>Employee</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_home">Home</string>
    <string name="background">Background</string>
    <string name="title_activity_splash_screen">"QR Code Protection "</string>
    <string name="skip">Skip</string>
    <string name="welcome_msg">Welcome</string>
    <string name="protected_code">PASS</string>
    <string name="title">Title</string>
    <string name="choice_preview">Choice Preview</string>
    <string name="cct">Choose code type</string>
    <string name="aztec">Aztec</string>
    <string name="codabar">Codabar</string>
    <string name="aztec_dis">2D Barcode which can encode all the 256 ASCII and extended ASCII characters (3832 digits, 3067 letters, or 1914 bytes of data)</string>
    <string name="codobar_dis">Codabar (sometimes called Code 2 of 7) is a discrete, width–modulated barcode that provides a character set for encoding numeric data (0–9) plus six special characters ($, -, :, /, ., +) (43 characters including numbers)</string>
    <string name="data_matrix">Data Matrix</string>
    <string name="data_matrix_dis">The Data Matrix is  high-density, two-dimensional (2D) barcode that encodes text, numbers, files and actual data bytes (5067 digits, 3804 letters, or 2532 binary data)</string>
    <string name="maxicode">Maxicode</string>
    <string name="maxicode_dis">Maxicode (barcode) uses dots in hexagonal grid for representing information (93 characters of information)</string>

    <string name="code_39">USD-3 (Code-39)</string>
    <string name="code_39_dis">The Code 39 specification defines 43 characters, consisting of uppercase letters (A through Z), numeric digits (0 through 9) and a number of special characters (-, ., $, /, +, %, and space)</string>
    <string name="code_93">Code-93</string>
    <string name="code_93_dis">Code 93 was designed to complement and improve upon Code 39 (up to 47 characters)</string>
    <string name="code_128">Code-128</string>
    <string name="code_128_dis">Code 128 was designed to complement and improve upon Code 128 (Supports Unicode, up to 60 characters)</string>

    <string name="ean">International Article Number (EAN)</string>
    <string name="ean_8">EAN-8</string>
    <string name="ean_8_dis">It\'s usually use to identify a specific retail product details (8 characters)</string>
    <string name="ean_13">EAN-13</string>
    <string name="ean_13_dis">It\'s usually use to identify a specific retail product details (13 characters)</string>

    <string name="itf">ITF (Interleaved Two of Five)</string>
    <string name="itf_dis">ITF is the GS1 implementation of an ITf bar code to encode a Global Trade Item Number (up to 14 Characters)</string>
    <string name="pdf417">PDF417</string>
    <string name="pdf417_dis">PDF417 is a stacked linear barcode symbol format used in a variety of applications, primarily transport, identification cards, and inventory management (up to 850 characters)</string>
    <string name="qr_code">QR code (Quick Response Code)</string>
    <string name="qr_code_dis">Qr code are typically used for storing URLs or other information for reading by the camera on a smartphone(2157 digits, 1307 letters, or 898 bytes of data)</string>
    <string name="back_key">Back Key</string>
    <string name="delete">Delete</string>
    <string name="rss">RSS-14 (Reduced Space Symbology)</string>
    <string name="rss_dis">DataBar barcode are often used to label fresh foods. These barcode can hold information like an item\'s batch number or expiry date, in addition to other attributes used at the point-of-sale such the item weight (14 Numeric Characters)</string>
    <string name="rss_expanded">RSS-Expanded</string>
    <string name="rss_expanded_dis">Expanded Version of RSS-14 (41 Alphanumeric or 74 Numeric)</string>
    <string name="extension">UPC/EAN Extension</string>
    <string name="extension_dis">UPC-A, UPC-E, and EAN-13 can all have an additional barcode located to the right of the main barcode that contains additional information. This second barcode is normally not as tall as the primary barcode and can encode either two or five additional digits. Supplement 2 encodes two digits</string>
    <string name="upc">UPC (Universal Product Code)</string>
    <string name="upc_a">UPC-A</string>
    <string name="upc_a_dis">The Universal Product Code (UPC) is a barcode symbology that is widely used in the United States, Canada, United Kingdom, Australia, New Zealand, in Europe and other countries for tracking trade items in stores (12 Numeric Characters)</string>
    <string name="upc_e">UPC-E</string>
    <string name="upc_e_dis">The Universal Product Code (UPC) is a barcode symbology that is widely used in the United States, Canada, United Kingdom, Australia, New Zealand, in Europe and other countries for tracking trade items in stores (12 Numeric Characters)</string>
    <string name="contact">Contact Detail</string>
    <string name="sms">SMS</string>
    <string name="location">Geographical location</string>
    <string name="text">Simple Text</string>
    <string name="email2">Email</string>
    <string name="extra_info">…</string>
    <string name="code">Code</string>
    <string name="back_color">Background Color</string>
    <string name="fore_color">Foreground Color</string>
    <string name="generate">Generate</string>
    <string name="tools">tools</string>
    <string name="search">Search</string>
    <string name="ref_iv">Reference in=mageview</string>
    <string name="url">URL</string>
    <string name="wifi">WI-FI Details</string>
    <string name="fv">(Free Version)</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="support">Support</string>
    <string name="create">Create</string>
    <string name="scan">Scan</string>
    <string name="rate">Rate</string>
    <string-array name="icons">
        <item>ic_create_white</item>
        <item>ic_scan_info</item>
    </string-array>
    <string-array name="optionNames">
        <item>Create Barcode</item>
        <item>Scan Barcode</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="primary_number">Primary Number</string>
    <string name="add">add</string>
    <string name="icon">icon</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Select none</string>
    <string name="description">Description:</string>
    <string name="information">Information:</string>
    <string name="stored_at">Stored At:</string>
    <string name="code_preview">Code Preview:</string>
    <string name="std_info">Standard Information</string>
    <string name="link">Invite</string>
    <string name="apk_file">APK file</string>
    <string name="invitation_title">Try out the app called "Barcode Generator"</string>
    <string name="invitation_message">Barcode Generator let you generate encrypted QR-code and various other Bar-codes</string>
</resources>