<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/nav_back"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/pad6dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingEnd="@dimen/dPad"
            android:paddingStart="@dimen/dPad">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingBottom="@dimen/pad6dp"
                android:text="@string/app_name" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fv"
                android:textColor="#90eeeeee"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/settings"
        android:layout_width="@dimen/pad36dp"
        android:layout_height="@dimen/pad36dp"
        android:layout_marginEnd="@dimen/dPad"
        android:layout_marginRight="@dimen/dPad"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/action_settings"
        android:onClick="onClick"
        android:padding="@dimen/dPad"
        android:src="@drawable/ic_settings"
        android:visibility="gone" />

</LinearLayout>